# CircusGroupBot

./: HowToUse  LICENSE  TODO  keepalive.py  main.py  pyproject.toml
python/: commands.py  event.py  event_template.py  signup.py
